--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
         "title": "Explore Zip File"
       },
       {
+        "command": "zipexplorer.clear",
+        "title": "Clear view"
+      },
+      {
         "command": "openZipResource",
         "title": "Open Zip Resource"
       }
@@ -82,6 +86,12 @@
           "command": "zipexplorer.exploreZipFile",
           "when": "resourceLangId == zip",
           "group": "0_zip@3"
+        }
+      ],
+      "view/title": [
+        {
+          "command": "zipexplorer.clear",
+          "when": "view == zipExplorer"
         }
       ]
     },
