support open .jar file

--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
           "ZIP"
         ],
         "extensions": [
-          ".zip"
+          ".zip",
+          ".jar"
         ]
       }
     ],
